--- a/RallyVision/local.properties
+++ b/RallyVision/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jul 21 05:21:15 BRT 2014
-sdk.dir=/Applications/Android Studio.app/sdk
+#Tue Jan 20 13:18:11 BRT 2015
+sdk.dir=/Applications/Android Developer SDK/sdk
