--- a/RallyVision/project.properties
+++ b/RallyVision/project.properties
@@ -85,3 +85,6 @@ dex.disable.merger=true
 dex.disable.merger=true
 android.library.reference.1=../aFileChooser
 android.library.reference.2=../android-support-v7-appcompat
+dex.disable.merger=true
+dex.disable.merger=true
+dex.disable.merger=true
