--- a/RallyVision/AndroidManifest.xml
+++ b/RallyVision/AndroidManifest.xml
@@ -36,6 +36,7 @@
         <activity
             android:name="anastasoft.rallyvision.activity.MenuPrincipal"
             android:launchMode="singleTop"
+            android:configChanges="orientation|screenSize"
             android:label="@string/app_name">
 
             <intent-filter>
