--- a/RallyVision/AndroidManifest.xml
+++ b/RallyVision/AndroidManifest.xml
@@ -15,6 +15,8 @@
     <uses-permission android:name="com.android.vending.CHECK_LICENSE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+
 
 
     <!-- Ubertesters library user-permissions -->
