--- a/RallyVision/build.gradle
+++ b/RallyVision/build.gradle
@@ -19,5 +19,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
     compile "com.android.support:appcompat-v7:$rootProject.supportLibrariesVersionExt"
-
+    compile project(path: ':swipelistview')
+    compile project(path: ':aFileChooser')
 }
