--- a/RallyVision/build.gradle
+++ b/RallyVision/build.gradle
@@ -18,9 +18,9 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
     compile "com.android.support:appcompat-v7:$rootProject.supportLibrariesVersionExt"
+    compile "com.android.support:preference-v7:$rootProject.supportLibrariesVersionExt"
     compile project(path:':swipelistview')
     compile project(path:':aFileChooser')
     compile "com.google.android.gms:play-services-analytics:$rootProject.playServicesVersionExt"
-
 }
 
